--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -58,3 +58,13 @@
 .clear-float {
   clear: both;
 }
+
+.map-container {
+  width: 100%;
+  height: 900px;
+}
+
+#map_canvas {
+  width: 100%;
+  height: 100%;
+}
