--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,7 @@
-h1= title
-p Welcome to #{title}
+.row
+  .span12
+    .map-container
+      #map_canvas
+      
+script(type='text/javascript', src='http://maps.googleapis.com/maps/api/js?key=AIzaSyDt3Wg9EIXvoW5qpro4e-hl9sgarNTmEnE&sensor=false')
+script(type='text/javascript', src='js/index.js')
