--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,3 +1,8 @@
+body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
 @navbar-bgcolor: #1568db;
 @navbar-color: #ffffff;
 @footer-bgcolor: #dedede;
