--- a/views/add.jade
+++ b/views/add.jade
@@ -12,17 +12,17 @@
       .span4
         form(method='POST')
           fieldset
-            legend WFL Sign Up
+            legend Sign Up
             .space1
-            label(for='form-signup-nickname') Name (real or nick name)
-            input#form-signup-nickname(maxlength='255', name='nickname', size='25', type='text', required, value=nickname)
+            label(for='form-signup-nickname') Company Name
+            input#form-signup-nickname(maxlength='255', name='companyname', size='25', type='text', required, value=nickname, placeholder='Enter your company name')
             label(for='form-login-username') Email address
             input#form-login-username(maxlength='255', name='username', size='25', type='text', required, placeholder='Enter your email address')
             label(for='form-login-password') Password
             input#form-login-password(maxlength='16', name='password', size='25', type='password', required, placeholder='Enter your password')
             label(for='form-login-password-confirm') Confirm Password
             input#form-login-password-confirm(maxlength='16', name='passwordconfirm', size='25', type='password', required, placeholder='Re-enter your password')
-            .message!= partial('../messages') 
+            .message!= partial('messages') 
             button.btn.btn-primary(type='submit') Sign Up
       .span2
         .row.space3
