--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,20 @@
 .row
   .span3
-    | Client list
+    .client-container
+      .navbar
+        .navbar-inner
+          .container
+            ul.nav
+              li
+                form.navbar-search
+                  input(type='text', placeholder='Search...')
+              li
+                button.btn.btn-info
+                  i.icon-search.icon-white
+      .row
+        .span3.clientlist-container
+          table.table.table-striped
+            tbody
   .span9
     .map-container
       #map_canvas
