--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -66,10 +66,32 @@ body {
 
 .map-container {
   width: 100%;
-  height: 900px;
+  height: 700px;
 }
 
 #map_canvas {
   width: 100%;
   height: 100%;
 }
+
+.client-container {
+  .container {
+    width: 100%;
+    
+    input {
+      width: 170px;
+    }
+  }  
+}
+
+.clientlist-container {
+  display: block;
+  height: 675px;
+  overflow-y: auto;  
+  
+  .client-row {
+    cursor: pointer;
+  }
+}
+
+
