Search feature for landing page.  Modified data page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -76,11 +76,7 @@ body {
 
 .client-container {
   .container {
-    width: 100%;
-    
-    input {
-      width: 170px;
-    }
+    width: 100%;    
   }  
 }
 
@@ -93,5 +89,17 @@ body {
     cursor: pointer;
   }
 }
+
+ul.search-bar {
+  li {
+    display: inline-block
+  }
+  
+  input {
+    margin-bottom: 0px;
+  }
+}
+
+
 
 
