--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -100,6 +100,39 @@ ul.search-bar {
   }
 }
 
+.newdata {
+  width: 100%;
+  
+  input {
+    width: 100%;
+    padding: 0;
+  }
+}
 
+.table td.header {
+  padding-top: 5px;
+  padding-bottom: 0;
+}
+
+#customer-list {
+  td a.edit-tool {
+    float: right;
+    top: 0;
+    right: 0;
+    clear: both;    
+  }
+  
+  td a.edit-tool .edit-icon {
+    display: none;
+    width: 16px;
+    height: 16px;
+    background-image: url('../images/glyphicons-halflings.png');
+    background-position: -97px -74px;
+  }
+  
+  td:hover a.edit-tool .edit-icon {
+    display: block;
+  }
+}
 
 
