--- a/views/profile.jade
+++ b/views/profile.jade
@@ -1,2 +1,29 @@
-h1= title
-p Welcome to #{title}
+.row
+  .span4.offset4
+    .row
+      .span4
+        form(method='POST')
+          fieldset
+            legend PROFILE
+            .space1
+            label(for='form-signup-nickname') Company Name
+            input#form-signup-nickname(maxlength='255', name='companyname', size='25', type='text', value=nickname, placeholder='Enter your company name')= user.nickname
+            label(for='form-login-username') Email address
+            input#form-login-username(maxlength='255', name='username', size='25', type='text', required, placeholder='Enter your email address')= user.username
+            label Company Address (optional)
+            textarea(name='address', placeholder='Enter your company address')= user.address
+            .message!= partial('messages') 
+            button.btn.btn-primary(type='submit') Save
+    .row
+      .span4
+        form(method='POST', action='/changepassword')
+          fieldset
+            legend Change password
+            .space1
+            label(for='form-login-password') Password
+            input#form-login-password(maxlength='16', name='password', size='25', type='password', required, placeholder='Enter your password')
+            label(for='form-login-password-confirm') Confirm Password
+            input#form-login-password-confirm(maxlength='16', name='passwordconfirm', size='25', type='password', required, placeholder='Re-enter your password')
+            .message!= partial('messages') 
+            button.btn.btn-primary(type='submit') Save
+script(type='text/javascript', src='/js/signup.js')
